tests/snapshots/corpus__sexpr@error_bare_value.kdl.snap
---
source: tests/corpus.rs
expression: "97\n"
---
(document
  (node
    (error "values are not allowed without a containing node")
    (trivia "97"))
  (trivia "\n"))
