tests/snapshots/corpus__sexpr@error_unclosed_raw_string.kdl.snap
---
source: tests/corpus.rs
expression: "r##\"unclosed\"#\n"
---
(document
  (node
    (error "unclosed raw string"))
