tests/snapshots/corpus__sexpr@error_unclosed_string.kdl.snap
---
source: tests/corpus.rs
expression: "\"unclosed\n"
---
(document
  (node
    (error "unclosed string"))
