tests/snapshots/corpus__sexpr@error_value_as_property_key.kdl.snap
---
source: tests/corpus.rs
expression: "node true=true\n"
---
(document
  (node
    (name node)
    (trivia " ")
    (argument
      (value true)
      (error "property keys must be identifiers")
      (trivia "=" "true"))
    (trivia "\n")))
