tests/snapshots/corpus__sexpr@error_whitespace_before_argument.kdl.snap
---
source: tests/corpus.rs
expression: "node 1\"oops\"\n"
---
(document
  (node
    (name node)
    (trivia " ")
    (argument
      (value 1))
    (argument
      (value "oops"))
    (error "node arguments must be separated by whitespace")
    (trivia "\n")))
